tests/typecheck/should_fail/MissingExportList03.hs
{-# OPTIONS_GHC -Werror -fwarn-missing-export-lists #-}
module ShouldFail where

foo :: String
foo = "foo"
